style: Fix overflow

--- a/src/styles/InfoRight.css
+++ b/src/styles/InfoRight.css
@@ -25,6 +25,7 @@
 @media screen and (max-width: 768px){
     .card{
         width:350px;
+        padding:10px 15px;
     }
 }
 @media screen and (max-width:480px){
